# dns_exfil

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: discord.rs  main.rs  slack.rs
