[package]
name = "dns_exfil"
version = "0.1.0"
authors = ["freddd"]
edition = "2018"

[dependencies]
dns-parser = "0.8.0"
clap = "2.33.3"
log = "0.4"
env_logger = "0.8.2"
reqwest = {version = "0.10.10", features = ["blocking", "json"] }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
rayon = "1.5.0"
